# xls2csv

./: 2csv.sh  2yyyy.sh  README.md  main.py  pyproject.toml  yyy2yyyy.py
