[tool.poetry]
name = "xls2csv"
version = "0.1.0"
description = ""
authors = ["Andrew Chen <yongjhih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.2"
xlrd = "^2.0.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
